--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="section">
         <h2>Tutorial Web Hosting</h2>
         <p>Tutorial lengkap cara membuat web hosting dan mengisi konten website.</p>
-        <a href="" class="download-btn" download>Download Langkah Langkah Hosting</a>
+        <a href="Fadhil itsar_607012400090_4802_hosting.pdf" class="download-btn" download>Download Langkah Langkah Hosting</a>
         <a href="Fadhil Itsar_607012400090_4802.pdf" class="download-btn" download>Download Tutorial Mengisi Web</a>
     </div>
 </body>
